--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 <div class="box-container">
 
     <div class="box">
-        <img src="projectpic/img1.png" alt="">
+        <img src="img1.png" alt="">
     </div>
 
     <div class="box">
