--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="shortcut icon" type="x-icon" href="Projectpic/logo.png">
+    <link rel="shortcut icon" type="x-icon" href="logo.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manish Portfolio</title>
@@ -163,23 +163,23 @@
     </div>
 
     <div class="box">
-        <img src="projectpic/img2.jpg" alt="">
+        <img src="img2.jpg" alt="">
     </div>
 
     <div class="box">
-        <img src="projectpic/img3.png" alt="">
+        <img src="img3.png" alt="">
     </div>
 
     <div class="box">
-        <img src="projectpic/img4.jpg" alt="">
+        <img src="img4.jpg" alt="">
     </div>
 
     <div class="box">
-        <img src="projectpic/img5.webp" alt="">
+        <img src="img5.webp" alt="">
     </div>
 
     <div class="box">
-        <img src="projectpic/img6.jpg" alt="">
+        <img src="img6.jpg" alt="">
     </div>
 
 </div>
